2011-12-23  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (highest_bit): Changing to external linkage.

	* arith.h (highest_bit): Declared.

	* rand.c (random): Rewrote using different algorithm which
	ensures even distribution, and avoids doing a bignum mod
	operation.

2011-12-23  Kaz Kylheku  <kaz@kylheku.com>

	Version 50

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2011-12-23  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (memql): New function.
	(some_satisfy): Return the first non-nil result, rather than t.
	(all_satisfy): Return the value of the last item, if all items
	are processed.

	* lib.h (memql): Declared.

	* txr.1: Documented memq, memql, memqual, tree-find, some,
	all, none, eq, eql and equal.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Documented copy-list, reverse, nreverse, ldiff and flatten.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Documented reduce-left and reduce-right.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	Bug #35010

	* match.c (extract_bindings): Make sure there are no duplicate
	variables among the extracted bindings. This is needed because
	of the other changes.
	(do_output_line, do_output): In handling the rep/repeat directives,
	append the original bindings to the extracted set bindings for the
	variables which just occur in the clause, so that Lisp code can see all
	of the variables.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vformat): If width is specified for ~s or ~a, and
	the object is not a string or number, then print it to a string
	and treat it as a string, adjusting it within the field.
	Also, do not simply abort on an unknown format directive
	but throw a proper exception.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vformat): Left-adjusted field is now  specified
	using < rather than '-'. The +, space and leading 0 are
	specified on the precision, not the width.
